[package]
name = "most_based_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rayon = "1.3.0"
tera = "1.15.0"
lazy_static = "1.4.0"
serde_json = "1.0.79"
serde = "1.0.136"
url = "2.2.2"
linkify = "0.8.0"