[package]
name = "reaction_toplist_bot"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
linkify = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "rustls_backend",
    "gateway",
    "model",
]
