[package]
name = "reaction_toplist_bot"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
linkify = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "rustls_backend",
    "gateway",
    "model",
]
